LoadCandidate Performance Fix

--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
                                                                 Student ID:
                                                                 <input type="text" class="form-control" placeholder="ID" id="studid">
                                                                 <br>
-                                                                <center><a href="#" class="btn btn-outline-warning block rounded-pill" data-bs-toggle="modal"
-                                                                    id="verifyStudent">Verify Student</a></center>
+                                                                <center><button href="#" class="btn btn-outline-warning block rounded-pill" data-bs-toggle="modal"
+                                                                    data-bs-toggle="tooltip" data-bs-placement="bottom" title="" data-bs-original-title="Verify If Student Has Already Voted"
+                                                                    id="verifyStudent">Verify Student</button></center>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -232,8 +233,7 @@
                 <script src="assets/vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
                 <script src="assets/js/datatables.min.js"></script>
                 <script src="assets/js/bootstrap.bundle.min.js"></script>
-                <script defer src="assets/js/loadCandidatesUSC.js"></script>
-                <script src="assets/js/loadCandidatesCSC.js"></script>
+                <script src="assets/js/loadCandidates.js"></script>
                 <script src="assets/js/submitVerifyVotes.js"></script>
                 <script src="assets/js/sweetalert2/dist/sweetalert2.min.js"></script>
                 <script src="assets/js/jspdf.umd.min.js"></script>
