--- a/auth-login.html
+++ b/auth-login.html
@@ -26,7 +26,7 @@ background-size:cover;
 <body>
     <div id="auth">
         <div class="row h-100">
-            <div class="col-lg-10 col-15">
+            <div class="col-lg-7 col-12">
                 <div id="auth-left">
                     <div class="auth-logo">
                         <img src="assets\images\logo\BU.gif" style="height:200px; width:200px;"  alt="Logo">
@@ -34,19 +34,19 @@ background-size:cover;
                     <h5 class="auth-title" style= "color:black;">USC | CSC Assisted<br>Voting System</h5>
                     <p class="auth-subtitle mb-5;" style= "color:black" >Login</p>
                     <form action="javascript:login()" >
-                        <div class="form-group position-relative has-icon-left mb-4">
-                            <input type="text" class="form-control form-control-xl" style="width: 400px;" placeholder="Username" id="username">
+                        <div class="form-group position-relative has-icon-left mb-4 w-75">
+                            <input type="text" class="form-control form-control-xl" placeholder="Username" id="username">
                             <div class="form-control-icon">
                                 <i class="bi bi-person"></i>
                             </div>
                         </div>
-                        <div class="form-group position-relative has-icon-left">
-                            <input type="password" class="form-control form-control-xl" style="width: 400px;" placeholder="Password" id="password">
+                        <div class="form-group position-relative has-icon-left w-75">
+                            <input type="password" class="form-control form-control-xl"  placeholder="Password" id="password">
                             <div class="form-control-icon">
                                 <i class="bi bi-shield-lock"></i>
                             </div>
                         </div>
-                        <input class="btn btn-primary btn-block btn-lg shadow-lg mt-2" style = "background-color:#009bde; width: 400px;" type="submit" value="Login">
+                        <input class="btn btn-primary btn-block btn-lg shadow-lg mt-2 w-75" style = "background-color:#009bde;" type="submit" value="Login">
                     </form>
                 </div>
             </div>
@@ -55,7 +55,6 @@ background-size:cover;
                 </div>
             </div>
         </div>
-
     </div>
     <script src="assets/js/auth-login.js"></script>
     <script src="assets/js/sweetalert2/dist/sweetalert2.min.js"></script>
