Candidate Load Bug Fix , Capitalized Reciept ID

--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
                                                                 Student ID:
                                                                 <input type="text" class="form-control" placeholder="ID" id="studid">
                                                                 <br>
-                                                                <center><button href="#" class="btn btn-outline-warning block rounded-pill" data-bs-toggle="modal"
-                                                                    data-bs-toggle="tooltip" data-bs-placement="bottom" title="" data-bs-original-title="Verify If Student Has Already Voted"
+                                                                <center><button href="#" class="btn btn-outline-warning block rounded-pill"
                                                                     id="verifyStudent">Verify Student</button></center>
                                                             </div>
                                                         </div>
