--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>USC|CSC Voting System</title>
     <link rel="shortcut icon" href="assets/images/logo/bu.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/@sweetalert2/theme-bootstrap-4/bootstrap-4.css">
