--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/vendors/perfect-scrollbar/perfect-scrollbar.css">
     <link rel="stylesheet" href="assets/vendors/bootstrap-icons/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/css/app.css">
-    <!--<script src="assets/js/check-auth.js"></script>-->
+    <script src="assets/js/check-auth.js"></script>
 </head>
 
 <body style="padding-top: 50px;">
